# hello

A-hello-cmake/: README.html
B-hello-headers/: README.html
cmake_preset/ninja/: 참고.txt
cmake_preset/ninja/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake_preset/ninja/build_ninja/: CMakeCache.txt  build.ninja  cmake_install.cmake
cmake_preset/preset/: CMakeLists.txt  CMakePresets.json  참고.txt
cmake_preset/vcpkg_linux/: main.cpp  참고.txt
cmake_preset/vcpkg_mac/: 참고.txt
cmake_preset/vcpkg_win/: CMakeLists.txt  CMakePresets.json  vcpkg.json  참고.txt
hello_opencv/: CMakeLists.txt
hello_opencv/src/: ImgView.cpp
hello_poco/: CMakeLists.txt
hello_poco/build_/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  hello_poco  rules.ninja
hello_poco/build_/.cmake/api/v1/reply/: cache-v2-fc0599f3da5489eb00f5.json  cmakeFiles-v1-8b091371ab60d89e3d95.json  codemodel-v2-8b024fbb55dd2ce6a230.json  index-2022-11-15T01-47-05-0176.json  target-hello_poco-Debug-1e9c57b3e7db31c86df4.json
hello_poco/src/: hello.cpp
